<resources>
    <string name="app_name">InstaClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="instagram">Instagram</string>
    <string name="Instagram">Instagram</string>
    <string name="you">You</string>
    <string name="me">me</string>
    <string name="ME">Me</string>
    <string name="username">UserName</string>
    <string name="sheillah">Sheillah</string>
    <string name="username">UserName</string>
    <string name="liked">Liked</string>
    <string name="user">username</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="_365_others">365 others</string>
    <string name="add_comment_here">add comment here</string>
</resources>